--- a/static/styles.css
+++ b/static/styles.css
@@ -18,3 +18,43 @@ main {
 section {
     margin-bottom: 2rem;
 }
+
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+nav a {
+    text-decoration: none;
+    color: #333;
+}
+
+@media (max-width: 600px) {
+    nav ul li {
+        display: block;
+        margin-bottom: 10px;
+    }
+}
+
+/* Default light theme styles */
+body {
+    background-color: #fff;
+    color: #333;
+}
+
+/* Dark theme styles */
+.dark-mode {
+    background-color: #333;
+    color: #fff;
+}
+
+/* You might also want to change the colors of other elements */
+.dark-mode header, .dark-mode footer {
+    background-color: #222;
+    color: #fff;
+}
